Added base content and all css for main page

--- a/temple/index.html
+++ b/temple/index.html
@@ -7,6 +7,8 @@
     6. Services content
     7. Reception content
     8. Missionaries content
+    9. Descriptions
+    10. Emergency Alert javascript
     -->
     <head>
         <meta charset="utf-8">
@@ -54,7 +56,42 @@
             <span id="close">X</span>
         </div>
         <main>
-            
+            <img src="http://via.placeholder.com/1000x250" alt="Banner picture of the temple" id="bannerimg">
+            <section id="temple">
+                <h2>Snowflake, Arizona Temple</h2>
+                <img src="http://via.placeholder.com/150x100" alt="Picture of Snowflake, Arizona Temple">
+                <p>Summary info about this temple Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente velit eaque, nulla est tempore, sequi, minima aut nobis beatae facere quae! Perferendis illum voluptates fugiat earum deleniti! Quaerat, dolor voluptates!</p>
+            </section>
+
+            <section id="weather">
+                <h2>Weather</h2>
+                <h3>92°F</h3>
+                <img src="http://via.placeholder.com/75x75" alt="Current weather">
+                <div id="bottom">
+                    <span id="windspeed">Windspeed: 0 mph</span>
+                    <span id="humidity">Humidity: 34%</span>
+                    <span id="feelslike">Feels like: 93°F</span>
+                </div>
+            </section>
+
+            <section id="forecast">
+                <h2>Forecast</h2>
+                <div id="tomorrow">
+                    <h2>Tomorrow</h2>
+                    <h3>92°F</h3>
+                    <img src="http://via.placeholder.com/75x75" alt="Current weather">
+                </div>
+                <div id="twodays">
+                    <h2>Wednesday</h2>
+                    <h3>92°F</h3>
+                    <img src="http://via.placeholder.com/75x75" alt="Current weather">
+                </div>
+                <div id="threedays">
+                    <h2>Thursday</h2>
+                    <h3>92°F</h3>
+                    <img src="http://via.placeholder.com/75x75" alt="Current weather">
+                </div>
+            </section>
         </main>
         <footer>
             <img src="images/icon.webp" alt="Icon" class="icon">
