Replaced most of the filler content for the home page.

--- a/temple/index.html
+++ b/temple/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- TO DO
-    3. Main page content
+    3. Main page weather javascript
     4. Temples content
     5. Reservations content
     6. Services content
@@ -56,11 +56,11 @@
             <span id="close">X</span>
         </div>
         <main>
-            <img src="http://via.placeholder.com/1000x250" alt="Banner picture of the temple" id="bannerimg">
+            <img src="home/images/banner.jpg" alt="Banner picture of the temple" id="bannerimg">
             <section id="temple">
                 <h2>Snowflake, Arizona Temple</h2>
-                <img src="http://via.placeholder.com/150x100" alt="Picture of Snowflake, Arizona Temple">
-                <p>Summary info about this temple Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente velit eaque, nulla est tempore, sequi, minima aut nobis beatae facere quae! Perferendis illum voluptates fugiat earum deleniti! Quaerat, dolor voluptates!</p>
+                <img src="home/images/snowflake_temple.jpg" alt="Picture of Snowflake, Arizona Temple">
+                <p>This is the Snowflake, Arizona temple. It serves 35,000 members. It is on top of a knoll that has become known as "Temple Hill." Ten times the population of Snowflake attended the open house in 2002. Gordon B. Hinckley is the one who dedicated this temple.</p>
             </section>
 
             <section id="weather">
