Added formatting, json, and idea for html content to temples

--- a/temple/index.html
+++ b/temple/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <!-- TO DO
     3. Main page weather javascript
-    4. Temples content
+    4. Temples page json -> javascript -> html
     5. Reservations content
     6. Services content
     7. Reception content
@@ -68,7 +68,7 @@
 
             <section id="temple">
                 <h2>Snowflake, Arizona Temple</h2>
-                <img src="home/images/snowflake_temple.jpg" alt="Picture of Snowflake, Arizona Temple">
+                <img src="home/images/snowflake_temple.jpeg" alt="Picture of Snowflake, Arizona Temple">
                 <p>This is the Snowflake, Arizona temple. It serves 35,000 members. It is on top of a knoll that has become known as "Temple Hill." Ten times the population of Snowflake attended the open house in 2002. Gordon B. Hinckley is the one who dedicated this temple.</p>
             </section>
 
