Modified/added clarifying comments

--- a/temple/index.html
+++ b/temple/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- TO DO
-    3. Main page weather javascript
-    4. Temples page json -> javascript -> html
-    5. Reservations content
-    6. Services content
-    7. Reception content
-    8. Missionaries content
-    9. Descriptions
-    10. Emergency Alert javascript
+    1. Reservations content
+    2. Services content
+    3. Reception content
+    4. Missionaries content
+    5. Main page weather javascript
+    6. Temples page json -> javascript -> html
+        6.5 Temples like button w/ localstorage
+    7. Emergency Alert javascript
+    8. Descriptions
+    -->
+
+    <!--
+        Specialized Services
+        Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes
+        A playroom and low-cost, short-term babysitting services for the children of patrons
+        Long-term stay accommodations in kitchenette suites for full-time temple missionaries
+        Temple history themed reception and sitting area
+        A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving
+        A family search center that supports family search and ordinance work
+        What other ideas do you have?
+
+        Free Amenities
+        Breakfast
+        Exercise/workout room
+        Indoor pool
+        WiFi high-speed internet access and smart TVs
+        Parking
+        Temple shuttle
+        Family history consultation and family ordinance card service
     -->
     <head>
         <meta charset="utf-8">
