--- a/temple/services/missionary/index.html
+++ b/temple/services/missionary/index.html
@@ -46,7 +46,11 @@
             <span id="close">X</span>
         </div>
         <main>
-            
+            <!--
+                A full-time temple missionary page that provides information and images
+                about the suites offered at the hotel with a simple Contact Us form for
+                more details. 
+            -->
         </main>
         <footer>
             <img src="../../images/icon.webp" alt="Icon" class="icon">
