--- a/temple/services/reception/index.html
+++ b/temple/services/reception/index.html
@@ -46,7 +46,10 @@
             <span id="close">X</span>
         </div>
         <main>
-            
+            <!--
+                The reception page displaying information about the wedding reception
+                accommodations, including options for food service and setup.
+            -->
         </main>
         <footer>
             <img src="../../images/icon.webp" alt="Icon" class="icon">
