--- a/temple/reservations/index.html
+++ b/temple/reservations/index.html
@@ -46,7 +46,13 @@
             <span id="close">X</span>
         </div>
         <main>
-            
+            <!-- 
+                The Reservation page contains a form that collects relevant information
+                when making a normal stay reservation including the location, date,
+                number and type of rooms, registrant's full name, email, phone, home state
+                or country, and special accommodations/comments. Make sure to do some form
+                validation.
+            -->
         </main>
         <footer>
             <img src="../images/icon.webp" alt="Icon" class="icon">
