--- a/temple/services/index.html
+++ b/temple/services/index.html
@@ -46,7 +46,11 @@
             <span id="close">X</span>
         </div>
         <main>
-            
+            <!--
+                The Services page provides a list with information of the amenities and
+                special services offered at the hotel along with the following sub
+                pages/content:
+            -->
         </main>
         <footer>
             <img src="../images/icon.webp" alt="Icon" class="icon">
