--- a/temple/index.html
+++ b/temple/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- TO DO
-    1. Reservations content
-    2. Services content
-    3. Reception content
-    4. Missionaries content
-    5. Main page weather javascript
-    6. Temples page json -> javascript -> html
-        6.5 Temples like button w/ localstorage
+    1. Services content
+    2. Reception content
+    3. Missionaries content
+    4. Main page weather javascript
+    5. Temples page json -> javascript -> html
+        5.5 Temples like button w/ localstorage
+    6. Reservations calender min date auto change with javascript
     7. Emergency Alert javascript
     8. Descriptions
     -->
