I think added all content for services page

--- a/temple/index.html
+++ b/temple/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- TO DO
-    1. Services content
-    2. Reception content
-    3. Missionaries content
-    4. Main page weather javascript
-    5. Temples page json -> javascript -> html
-        5.5 Temples like button w/ localstorage
-    6. Reservations calender min date auto change with javascript
-    7. Emergency Alert javascript
+    1. Reception content
+    2. Missionaries content
+    3. Main page weather javascript
+    4. Temples page json -> javascript -> html
+        4.5 Temples like button w/ localstorage
+    5. Reservations calender min date auto change with javascript
+    6. Emergency Alert javascript
+    7. Last modified in footer
     8. Descriptions
     -->
 
