--- a/temple/services/index.html
+++ b/temple/services/index.html
@@ -23,8 +23,8 @@
         <header>
             <a href="../"><img src="../images/icon.webp" alt="Icon" class="icon"></a>
             <h1>The Temple Inn & Suites</h1>
-            <a href="https://www.facebook.com" target="_blank"><figure class="facebook_logo"><img src="../images/facebook40.webp" alt="Facebook Icon" srcset="../images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook"></figure></a>
-            <a href="https://mobile.twitter.com" target="_blank"><figure class="twitter_logo"><img src="../images/twitter40.webp" alt="Twitter Icon" srcset="../images/twitter40.webp 1x, images/twitter80.webp 2x, images/twitter160.webp 3x" id="twitter"></figure></a>
+            <a href="https://www.facebook.com" target="_blank"><figure class="facebook_logo"><img src="../images/facebook40.webp" alt="Facebook Icon" srcset="../images/facebook40.webp 1x, ../images/facebook80.webp 2x, ../images/facebook160.webp 3x" id="facebook"></figure></a>
+            <a href="https://mobile.twitter.com" target="_blank"><figure class="twitter_logo"><img src="../images/twitter40.webp" alt="Twitter Icon" srcset="../images/twitter40.webp 1x, ../images/twitter80.webp 2x, ../images/twitter160.webp 3x" id="twitter"></figure></a>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
@@ -46,11 +46,29 @@
             <span id="close">X</span>
         </div>
         <main>
-            <!--
-                The Services page provides a list with information of the amenities and
-                special services offered at the hotel along with the following sub
-                pages/content:
-            -->
+            <h3>What We Offer</h3>
+            <h4>Free Amenities</h4>
+            <ul>
+                <li>Breakfast</li>
+                <li>Exercise/workout room</li>
+                <li>Indoor pool</li>
+                <li>WiFi high-speed internet access and smart TVs</li>
+                <li>Parking</li>
+                <li>Temple shuttle</li>
+                <li>Family history consultation and family ordinance card service</li>
+            </ul>
+
+            <h4>Specialized Services</h4>
+            <ul>
+                <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
+                <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
+                <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+                <li>Temple history themed reception and sitting area</li>
+                <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+                <li>A family search center that supports family search and ordinance work</li>
+            </ul>
+
+            <p>Here you can find what we offer as a <a href="reception/">reception</a> and for <a href="missionary/">full time missionaries.</a></p>
         </main>
         <footer>
             <img src="../images/icon.webp" alt="Icon" class="icon">
