Added content for reception and missionary pages. Deleted unused 404 page and added descriptions to all pages.

--- a/temple/index.html
+++ b/temple/index.html
@@ -1,35 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- TO DO
-    1. Reception content
-    2. Missionaries content
-    3. Main page weather javascript
-    4. Temples page json -> javascript -> html
-        4.5 Temples like button w/ localstorage
-    5. Reservations calender min date auto change with javascript
-    6. Emergency Alert javascript
-    7. Last modified in footer
-    8. Descriptions
-    -->
-
-    <!--
-        Specialized Services
-        Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes
-        A playroom and low-cost, short-term babysitting services for the children of patrons
-        Long-term stay accommodations in kitchenette suites for full-time temple missionaries
-        Temple history themed reception and sitting area
-        A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving
-        A family search center that supports family search and ordinance work
-        What other ideas do you have?
-
-        Free Amenities
-        Breakfast
-        Exercise/workout room
-        Indoor pool
-        WiFi high-speed internet access and smart TVs
-        Parking
-        Temple shuttle
-        Family history consultation and family ordinance card service
+    1. Main page weather javascript
+    2. Temples page json -> javascript -> html
+        2.5 Temples like button w/ localstorage
+        2.6 Finish json
+    3. Reservations calender min date auto change with javascript
+    4. Emergency Alert javascript
+    5. Last modified in footer
     -->
     <head>
         <meta charset="utf-8">
@@ -37,7 +15,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="">
+        <meta name="description" content="Main page for The Temple Inn & Suites. Here we have local weather information and info on one of the temples we provide our service for.">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/all.css">
