--- a/temple/reservations/index.html
+++ b/temple/reservations/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="">
+        <meta name="description" content="Here you can make reservations with us.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
@@ -76,6 +76,7 @@
                         <h4>Special Rooms</h4>
                         <label><input type="checkbox" name="changing" value="yes"> Changing Room</label><br>
                         <label class="nomargin"><input type="checkbox" name="play" value="yes"> Playroom</label>
+                        <label class="nomargin"><input type="checkbox" name="wedding" value="yes"> Wedding Reception Hall</label>
                     </div>
                 </fieldset>
 
