--- a/temple/services/index.html
+++ b/temple/services/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="">
+        <meta name="description" content="This is our services page where we have a list of all of our services.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
@@ -68,7 +68,7 @@
                 <li>A family search center that supports family search and ordinance work</li>
             </ul>
 
-            <p>Here you can find what we offer as a <a href="reception/">reception</a> and for <a href="missionary/">full time missionaries.</a></p>
+            <p>Here you can find what we offer as a <a href="reception/">wedding reception</a> and for <a href="missionary/">full-time missionaries.</a></p>
         </main>
         <footer>
             <img src="../images/icon.webp" alt="Icon" class="icon">
