--- a/temple/services/missionary/thankyou/index.html
+++ b/temple/services/missionary/thankyou/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Thank You | The Temple Inn & Suites</title>
-        <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../../../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="Thank you for making a reservation with us!">
+        <meta name="description" content="Thank you, we will get back to you soon.">
 
-        <link rel="stylesheet" href="../../css/normalize.css">
-        <link rel="stylesheet" href="../../css/all.css">
+        <link rel="stylesheet" href="../../../css/normalize.css">
+        <link rel="stylesheet" href="../../../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-        <script src="../../js/base.js" defer></script>
+        <script src="../../../js/base.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
@@ -21,21 +21,21 @@
     </head>
     <body>
         <header>
-            <a href="../../"><img src="../../images/icon.webp" alt="Icon" class="icon"></a>
+            <a href="../../../"><img src="../../../images/icon.webp" alt="Icon" class="icon"></a>
             <h1>The Temple Inn & Suites</h1>
-            <a href="https://www.facebook.com" target="_blank"><figure class="facebook_logo"><img src="../../images/facebook40.webp" alt="Facebook Icon" srcset="../../images/facebook40.webp 1x, ../../images/facebook80.webp 2x, ../../images/facebook160.webp 3x" id="facebook"></figure></a>
-            <a href="https://mobile.twitter.com" target="_blank"><figure class="twitter_logo"><img src="../../images/twitter40.webp" alt="Twitter Icon" srcset="../../images/twitter40.webp 1x, ../../images/twitter80.webp 2x, ../../images/twitter160.webp 3x" id="twitter"></figure></a>
+            <a href="https://www.facebook.com" target="_blank"><figure class="facebook_logo"><img src="../../../images/facebook40.webp" alt="Facebook Icon" srcset="../../../images/facebook40.webp 1x, ../../../images/facebook80.webp 2x, ../../../images/facebook160.webp 3x" id="facebook"></figure></a>
+            <a href="https://mobile.twitter.com" target="_blank"><figure class="twitter_logo"><img src="../../../images/twitter40.webp" alt="Twitter Icon" srcset="../../../images/twitter40.webp 1x, ../../../images/twitter80.webp 2x, ../../../images/twitter160.webp 3x" id="twitter"></figure></a>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../../">Home</a></li>
-                    <li><a href="../../temples/">Temples</a></li>
-                    <li><a href="../">Reservations</a></li>
+                    <li><a href="../../../">Home</a></li>
+                    <li><a href="../../../temples/">Temples</a></li>
+                    <li><a href="../../../reservations/">Reservations</a></li>
                     <div class="dropdown">
-                        <li class="dropbtn"><a href="../../services/">Services <i class="fa fa-caret-down"></i></a></li>
+                        <li class="dropbtn"><a href="../../">Services <i class="fa fa-caret-down"></i></a></li>
                         <div class="dropdown-content">
-                            <a href="../../services/reception/">Reception</a></li>
-                            <a href="../../services/missionary/">Temple Missionary</a></li>
+                            <a href="../../reception/">Reception</a></li>
+                            <a href="../">Temple Missionary</a></li>
                         </div>
                     </div>
                 </ul>
@@ -46,11 +46,10 @@
             <span id="close">X</span>
         </div>
         <main>
-            <h2>Thank you for making a reservation!</h2>
-            <p>We look foward to seeing you!</p>
+            <h2>We will get back to you soon!</h2>
         </main>
         <footer>
-            <img src="../../images/icon.webp" alt="Icon" class="icon">
+            <img src="../../../images/icon.webp" alt="Icon" class="icon">
             <div class="grid">
                 <div id="contact">
                     <h2 id="title">Contact Info</h2>
@@ -61,9 +60,9 @@
                 </div>
                 <div id="services">
                     <h2>Services</h2>
-                    <p><a href="../../services/">Services</a></p>
-                    <p><a href="../../services/reception/">Reception</a></p>
-                    <p><a href="../../services/missionary/">Temple Missionary</a></p>
+                    <p><a href="../../">Services</a></p>
+                    <p><a href="../../reception/">Reception</a></p>
+                    <p><a href="../">Temple Missionary</a></p>
                 </div>
             </div>
             <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
