--- a/temple/services/reception/index.html
+++ b/temple/services/reception/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="">
+        <meta name="description" content="These are all of the services we provide for a wedding reception.">
 
         <link rel="stylesheet" href="../../css/normalize.css">
         <link rel="stylesheet" href="../../css/all.css">
@@ -46,10 +46,9 @@
             <span id="close">X</span>
         </div>
         <main>
-            <!--
-                The reception page displaying information about the wedding reception
-                accommodations, including options for food service and setup.
-            -->
+            <h3>Wedding Reception Accommodations</h3>
+            <p>If you choose to have your wedding reception with us we offer several special services. The weddding reception hall can be easily customized with our simple catering menu. We have disposable cameras for guests to capture moments a photographer can't.</p>
+            <img src="images/reception.jpeg" alt="Example of a wedding reception.">
         </main>
         <footer>
             <img src="../../images/icon.webp" alt="Icon" class="icon">
