--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="">
+        <meta name="description" content="This is the temples subpage with information on all of our temples which we service.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
