Added last updated to footer and made min reservation date auto update.

--- a/temple/index.html
+++ b/temple/index.html
@@ -5,9 +5,9 @@
     2. Temples page json -> javascript -> html
         2.5 Temples like button w/ localstorage
         2.6 Finish json
-    3. Reservations calender min date auto change with javascript
-    4. Emergency Alert javascript
-    5. Last modified in footer
+    3. Emergency Alert javascript
+    4. Optimize images
+    5. Take up more room on the services page.
     -->
     <head>
         <meta charset="utf-8">
@@ -118,7 +118,10 @@
                     <p><a href="services/missionary/">Temple Missionary</a></p>
                 </div>
             </div>
-            <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+            <div id="bottom">
+                <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+                <p id="lastUpdated"></p>
+            </div>
         </footer>
     </body>
 </html>
