--- a/temple/services/index.html
+++ b/temple/services/index.html
@@ -87,7 +87,10 @@
                     <p><a href="missionary/">Temple Missionary</a></p>
                 </div>
             </div>
-            <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+            <div id="bottom">
+                <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+                <p id="lastUpdated"></p>
+            </div>
         </footer>
     </body>
 </html>
