--- a/temple/services/missionary/index.html
+++ b/temple/services/missionary/index.html
@@ -83,7 +83,10 @@
                     <p>Temple Missionary</p>
                 </div>
             </div>
-            <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+            <div id="bottom">
+                <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+                <p id="lastUpdated"></p>
+            </div>
         </footer>
     </body>
 </html>
