--- a/temple/services/missionary/thankyou/index.html
+++ b/temple/services/missionary/thankyou/index.html
@@ -65,7 +65,10 @@
                     <p><a href="../">Temple Missionary</a></p>
                 </div>
             </div>
-            <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+            <div id="bottom">
+                <p id="copy">&copy; 2022 The Temple Inn & Suites</p>
+                <p id="lastUpdated"></p>
+            </div>
         </footer>
     </body>
 </html>
