--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -28,16 +28,16 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../">Home</a></li>
-                    <li><a class="active">Temples</a></li>
-                    <li><a href="../reservations/">Reservations</a></li>
-                    <div class="dropdown">
-                        <li class="dropbtn"><a href="../services/">Services <i class="fa fa-caret-down"></i></a></li>
+                    <li class="link"><a href="../">Home</a></li>
+                    <li class="link"><a class="active">Temples</a></li>
+                    <li class="link"><a href="../reservations/">Reservations</a></li>
+                    <li class="dropdown">
+                        <a href="../services/" class="forcelink dropbtn">Services <i class="fa fa-caret-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="../services/reception/">Reception</a></li>
-                            <a href="../services/missionary/">Temple Missionary</a></li>
+                            <a href="../services/reception/">Reception</a>
+                            <a href="../services/missionary/">Temple Missionary</a>
                         </div>
-                    </div>
+                    </li>
                 </ul>
             </nav>
         </header>
