--- a/temple/services/index.html
+++ b/temple/services/index.html
@@ -28,16 +28,16 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../">Home</a></li>
-                    <li><a href="../temples/">Temples</a></li>
-                    <li><a href="../reservations/">Reservations</a></li>
-                    <div class="dropdown">
-                        <li class="dropbtn"><a class="active">Services <i class="fa fa-caret-down"></i></a></li>
+                    <li class="link"><a href="../">Home</a></li>
+                    <li class="link"><a href="../temples/">Temples</a></li>
+                    <li class="link"><a href="../reservations/">Reservations</a></li>
+                    <li class="dropdown">
+                        <a class="active forcelink dropbtn">Services <i class="fa fa-caret-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="reception/">Reception</a></li>
-                            <a href="missionary/">Temple Missionary</a></li>
+                            <a href="reception/">Reception</a>
+                            <a href="missionary/">Temple Missionary</a>
                         </div>
-                    </div>
+                    </li>
                 </ul>
             </nav>
         </header>
