Optimized homepage and temple page images.

--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -48,7 +48,7 @@
         <main>
             <section>
                 <h2>Snowflake, Arizona Temple</h2>
-                <img src="images/snowflake_temple.jpeg" alt="Picture of Snowflake, Arizona's Temple">
+                <img src="images/snowflake_temple300.jpeg" alt="Picture of Snowflake, Arizona's Temple">
                 <div>
                     <h3>Contact Info</h3>
                     <ul>
@@ -103,7 +103,7 @@
 
             <section>
                 <h2>Snowflake, Arizona Temple</h2>
-                <img src="images/snowflake_temple.jpeg" alt="Picture of Snowflake, Arizona's Temple">
+                <img src="images/snowflake_temple300.jpeg" alt="Picture of Snowflake, Arizona's Temple">
                 <div>
                     <h3>Contact Info</h3>
                     <ul>
