--- a/temple/index.html
+++ b/temple/index.html
@@ -7,6 +7,7 @@
             2.5 Temples like button w/ localstorage
             2.6 Finish json
         3. Emergency Alert javascript
+        4. Move cta on banner image
 
         Tomorrow:
         4. Optimize images
@@ -60,9 +61,9 @@
         <main>
             <div id="call">
                 <picture class="photoA">
-                    <source media="(max-width: 639px)" srcset="home/images/banner.jpg">
-                    <source media="(max-width: 1369px)" srcset="home/images/banner.jpg">
-                    <source media="(min-width: 1370px)" srcset="home/images/banner.jpg">
+                    <source media="(max-width: 639px)" srcset="home/images/banner639.jpg">
+                    <source media="(max-width: 900px)" srcset="home/images/banner900.jpg">
+                    <source media="(min-width: 901px)" srcset="home/images/banner.jpg">
                     <img src="home/images/banner.jpg" alt="Banner picture of the temple" id="bannerimg">
                 </picture>
                 <a href="reservations/">Reserve Now</a>
@@ -70,7 +71,11 @@
 
             <section id="temple">
                 <h2>Snowflake, Arizona Temple</h2>
-                <img src="home/images/snowflake_temple.jpeg" alt="Picture of Snowflake, Arizona Temple">
+                <picture class="photoA">
+                    <source media="(max-width: 1023px)" srcset="home/images/snowflake_temple150.jpeg">
+                    <source media="(min-width: 1024px)" srcset="home/images/snowflake_temple375.jpeg">
+                    <img src="home/images/snowflake_temple375.jpeg" alt="Picture of Snowflake, Arizona Temple">
+                </picture>
                 <p>This is the Snowflake, Arizona temple. It serves 35,000 members. It is on top of a knoll that has become known as "Temple Hill." Ten times the population of Snowflake attended the open house in 2002. Gordon B. Hinckley is the one who dedicated this temple.</p>
             </section>
 
