Optimized the rest of the images

--- a/temple/services/missionary/index.html
+++ b/temple/services/missionary/index.html
@@ -48,8 +48,8 @@
         <main>
             <h3>Full-time Missionaries</h3>
             <p>For full-time missionaries we offer long-term stay accommodations in kitchenette suites. You can also use a close family search center that supports family search and ordinance work.</p>
-            <img src="images/example1.jpg" alt="A nice dinner table with plenty of natural lighting via several windows which go from the floor to the ceiling.">
-            <img src="images/example2.jpg" alt="A couch set in the living room.">
+            <img src="images/1example275.jpg" alt="A nice dinner table with plenty of natural lighting via several windows which go from the floor to the ceiling.">
+            <img src="images/2example275.jpg" alt="A couch set in the living room.">
 
             <form method="get" action="thankyou/" aria-label="The form ask questions.">
                 <fieldset>
