--- a/temple/index.html
+++ b/temple/index.html
@@ -61,10 +61,10 @@
         <main>
             <div id="call">
                 <picture class="photoA">
-                    <source media="(max-width: 639px)" srcset="home/images/banner639.jpg">
-                    <source media="(max-width: 900px)" srcset="home/images/banner900.jpg">
-                    <source media="(min-width: 901px)" srcset="home/images/banner.jpg">
-                    <img src="home/images/banner.jpg" alt="Banner picture of the temple" id="bannerimg">
+                    <source media="(max-width: 639px)" srcset="home/images/banner639.webp">
+                    <source media="(max-width: 900px)" srcset="home/images/banner900.webp">
+                    <source media="(min-width: 901px)" srcset="home/images/banner.webp">
+                    <img src="home/images/banner.webp" alt="Banner picture of the temple" id="bannerimg">
                 </picture>
                 <a href="reservations/">Reserve Now</a>
             </div>
@@ -72,9 +72,9 @@
             <section id="temple">
                 <h2>Snowflake, Arizona Temple</h2>
                 <picture class="photoA">
-                    <source media="(max-width: 1023px)" srcset="home/images/snowflake_temple150.jpeg">
-                    <source media="(min-width: 1024px)" srcset="home/images/snowflake_temple375.jpeg">
-                    <img src="home/images/snowflake_temple375.jpeg" alt="Picture of Snowflake, Arizona Temple">
+                    <source media="(max-width: 1023px)" srcset="home/images/snowflake_temple150.webp">
+                    <source media="(min-width: 1024px)" srcset="home/images/snowflake_temple375.webp">
+                    <img src="home/images/snowflake_temple375.webp" alt="Picture of Snowflake, Arizona Temple">
                 </picture>
                 <p>This is the Snowflake, Arizona temple. It serves 35,000 members. It is on top of a knoll that has become known as "Temple Hill." Ten times the population of Snowflake attended the open house in 2002. Gordon B. Hinckley is the one who dedicated this temple.</p>
             </section>
