--- a/temple/services/reception/index.html
+++ b/temple/services/reception/index.html
@@ -49,10 +49,10 @@
             <h3>Wedding Reception Accommodations</h3>
             <p>If you choose to have your wedding reception with us we offer several special services. The weddding reception hall can be easily customized with our simple catering menu. We have disposable cameras for guests to capture moments a photographer can't.</p>
             <picture class="photoA">
-                <source media="(max-width: 600px)" srcset="images/reception300.jpeg">
-                <source media="(max-width: 1000px)" srcset="images/reception500.jpeg">
-                <source media="(min-width: 1001px)" srcset="images/reception.jpeg">
-                <img src="images/reception.jpeg" alt="Example of a wedding reception.">
+                <source media="(max-width: 600px)" srcset="images/reception300.webp">
+                <source media="(max-width: 1000px)" srcset="images/reception500.webp">
+                <source media="(min-width: 1001px)" srcset="images/reception.webp">
+                <img src="images/reception.webp" alt="Example of a wedding reception.">
             </picture>
         </main>
         <footer>
